--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,16 @@ dependencies:
   flutter_cached_pdfview: ^0.4.1
   http: ^0.13.4
   google_fonts: ^2.3.1
+  epub_viewer: ^0.2.5
+  path_provider: ^2.0.9
+  permission_handler: ^9.2.0
+  dio: ^4.0.6
+  flutter_typeahead: ^3.2.4
+  flutter_keyboard_visibility_web: ^2.0.0
+  rating_dialog: ^2.0.3
+  shared_preferences: ^2.0.13
+
+
 
 dev_dependencies:
   flutter_test:
